# dials_core_notes

./: note.py  note.sh  pyproject.toml
